# epub

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  deploy.yml  example.yml  release.yml  tests.yml
cli/: LICENSE  cli.py  main.py
cli/commands/: delete.py  edit.py  read.py  setup.py
cli/src/: epub3.py  exceptions.py  utils.py  xml.py
epub/: cli.py
epub/commands/: edit.py
tests/unit/: test_edit_commands.py  test_read_commands.py  test_setup_commands.py
tests/unit/classes/: test_epub3.py  test_xml.py
tests/unit/commands/: test_edit_commands.py
