[project]
name = "epub"
version = "0.1.1"
description = "epub manipulation package"
authors = [
	{ name = "Moses Lara", email = "mlara417@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "typer==0.13.0",
    "lxml==5.3.0"
]

[project.scripts]
epub = "cli.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
version_scheme = "semver2"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.hatch.version]
path = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.hatch.build]
include = ["epub", "pyproject.toml", "README.md", "LICENSE"]
exclude = ["__pycache__/", "tests/"]

[tool.hatch.publish]
#url = "https://upload.pypi.org/legacy/"
url = { value = "https://test.pypi.org/legacy/" }
auth = {env = "TEST_PYPI_API_TOKEN"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"