[project]
name = "epub"
version = "v0.1.9"
description = "epub manipulation package"
authors = [
	{ name = "Moses Lara", email = "mlara417@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "typer==0.13.0",
    "lxml==5.3.0"
]

[project.scripts]
epub = "cli.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.9"
version_scheme = "semver2"
tag_format = "v$version"
version_files = ["pyproject.toml"]

[tool.hatch.version]
path = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.hatch.build]
include = ["epub", "pyproject.toml", "README.md", "LICENSE"]
exclude = ["__pycache__/", "tests/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"