[project]
name = "epub"
version = "v0.3.3"
description = "epub manipulation package"
authors = [
	{ name = "Moses Lara", email = "mlara417@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "typer==0.13.0",
    "lxml==5.3.0",
    "epubcheck==v5.1.0"
]

[project.scripts]
epub = "cli.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.3"
version_scheme = "semver2"
tag_format = "v$version"
version_files = ["pyproject.toml"]

[tool.hatch.version]
path = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.hatch.build]
include = ["epub", "pyproject.toml", "README.md", "LICENSE"]
exclude = ["__pycache__/", "tests/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"